--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -32,7 +32,7 @@ transition: color 0.2s ease;
 }
 
 .header-nav a:hover{
-    color: #81cc81;
+    color: #01996D;
 }
 
 .header-login{
@@ -49,7 +49,7 @@ color:black;
 }
 
 .header-login a:hover{
-    color: #81cc81;
+    color: #01996D;
 }
 
 .btn, a.btn{
@@ -57,7 +57,7 @@ color:black;
     height: 51px;
     line-height: 51px;
     padding:  0 50px;
-    background-color: #81cc81;
+    background-color: #01996D;
     color:#fff;
     font-size: 20px;
     font-weight: 400;
@@ -68,5 +68,4 @@ color:black;
 .btn:hover, a.btn:hover{
     opacity: 0.8;
     color:#fff;
-
 }
