--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -27,45 +27,29 @@
     margin-left: 70px;
 }
 
-.header-nav a{
-transition: color 0.2s ease;
+.header-nav a {
+    transition: color 0.2s ease;
 }
 
-.header-nav a:hover{
+.header-nav a:hover {
     color: #01996D;
 }
 
-.header-login{
+.header-login {
     margin-left: auto;
-    }
+    display: flex;
+    align-items: center;
+}
 
-.header-login > *+*{
+.header-login > * + * {
     margin-left: 35px;
 }
 
-.header-login a{
-color:black;
+.header-login-link {
+    color: black;
     transition: 0.2s ease;
 }
 
-.header-login a:hover{
+.header-login-link :hover {
     color: #01996D;
-}
-
-.btn, a.btn{
-    display: inline-block;
-    height: 51px;
-    line-height: 51px;
-    padding:  0 50px;
-    background-color: #01996D;
-    color:#fff;
-    font-size: 20px;
-    font-weight: 400;
-    border-radius: 4px;
-    transition: opacity 0.2s ease;
-}
-
-.btn:hover, a.btn:hover{
-    opacity: 0.8;
-    color:#fff;
 }
