--- a/css/blocks/how-it-works.css
+++ b/css/blocks/how-it-works.css
@@ -1,137 +1,129 @@
 .how-it-works {
-	padding-top: 169px;
-	padding-bottom: 51px;
+    padding-top: 169px;
+    padding-bottom: 51px;
 }
 
 .how-it-works-header {
-	padding-bottom: 52px;
-	display: flex;
-	justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .how-it-works-header-head {
-	max-width: 584px;
-	margin-right: 30px;
+    max-width: 584px;
+    margin-right: 30px;
 }
 
 .how-it-works-title {
-	margin-bottom: -3px;
-	font-weight: 600;
-	font-size: 24px;
-	line-height: 157%;
+    margin-bottom: -3px;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 157%;
 }
 
 .how-it-works-subtitle {
-	line-height: 157%;
-	font-weight: 700;
-	font-size: 50px;
-	font-family: 'Georgia', serif;
-	color: #01996d;
+    font-weight: 700;
+    line-height: 157%;
+    font-size: 50px;
+    font-family: 'Georgia', serif;
+    color: #01996d;
 }
 
 .how-it-works-header-content {
-	padding-top: 58px;
-	max-width: 671px;
-	line-height: 150%;
-	font-weight: 500;
+    padding-top: 58px;
+    max-width: 671px;
+    line-height: 150%;
+    font-weight: 500;
 }
 
 .how-it-works-steps {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, 390px);
-	column-gap: 95px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 390px);
+    column-gap: 95px;
+
 }
 
 .step {
-	max-width: 390px;
+    max-width: 390px;
+
 }
 
 .step:nth-child(2) {
-	padding-top: 287px;
+    padding-top: 287px;
 }
 
 .step:nth-child(3) {
-	padding-top: 54px;
+    padding-top: 54px;
 }
 
 .step-heading {
-	position: relative;
-	padding-top: 135px;
-	padding-left: 88px;
-
-	margin-bottom: 55px;
-	font-family: 'Georgia', serif;
-	font-weight: 700;
-	font-size: 30px;
-	line-height: 150%;
-	color: #000000;
+    position: relative;
+    padding-top: 135px;
+    padding-left: 88px;
+    margin-bottom: 55px;
+    color: #000;
+    font-family: 'Georgia', serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 150%; /* 45px */
 }
 
 .step-heading::before {
-	position: absolute;
-	left: 0;
-	top: 0;
+    position: absolute;
+    left: 0;
+    top: 0;
+    content: attr(data-number);
+    color: rgba(1, 153, 109, 0.20);
+    font-size: 150px;
+    font-weight: 400;
+    line-height: 150%; /* 225px */
 
-	content: attr(data-number);
-	font-weight: 400;
-	font-size: 150px;
-	line-height: 150%;
-	color: rgba(1, 153, 109, 0.2);
 }
 
 .step-text {
-	margin-bottom: 60px;
-	font-weight: 500;
-	font-size: 20px;
-	line-height: 150%;
-	color: #424242;
+    margin-bottom: 60px;
+    color: #424242;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 150%; /* 30px */
 }
 
 .step-img-wrapper {
-	position: relative;
-	padding-bottom: 126%;
+    position: relative;
+    padding-bottom: 126%;
+    background-color: #622525;
 }
 
 .step-img {
-	border-radius: 8px;
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @media (max-width: 1399px) {
-	.how-it-works {
-		padding-top: 60px;
-		padding-bottom: 30px;
-	}
+    .how-it-works {
 
-	.how-it-works-subtitle {
-		line-height: 130%;
-		font-size: 40px;
-	}
+    }
 
-	.how-it-works-header-content {
-		padding-top: 20px;
-	}
+    .how-it-works-subtitle {
 
-	.how-it-works-header {
-		padding-bottom: 52px;
-		flex-direction: column;
-	}
+    }
+
+    .how-it-works-header-content {
+
+    }
+
+    .how-it-works-header {
+
+    }
 }
 
 @media (max-width: 1389px) {
-	.step:nth-child(2),
-	.step:nth-child(3) {
-		padding-top: 0px;
-	}
+
 }
 
 @media (max-width: 419px) {
-	.how-it-works-steps {
-		grid-template-columns: 1fr;
-	}
+
 }
