--- a/css/blocks/how-it-works.css
+++ b/css/blocks/how-it-works.css
@@ -90,7 +90,6 @@
 .step-img-wrapper {
     position: relative;
     padding-bottom: 126%;
-    background-color: #622525;
 }
 
 .step-img {
@@ -100,6 +99,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 8px;
 }
 
 @media (max-width: 1399px) {
