Added "product"-section in main-block

--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,7 @@ body {
     font-weight: 400;
     font-size: 20px;
     color: #424242;
+    line-height: 1.5;
 }
 
 .none {
@@ -13,8 +14,8 @@ body {
     position: absolute;
     opacity: 0;
     visibility: hidden;
-    width: 0px;
-    height: 0px;
+    width: 0;
+    height: 0;
     display: block;
     margin-left: -10000px;
     background: transparent;
@@ -27,4 +28,8 @@ body {
     width: 1400px;
     padding: 0 15px;
     margin: 0 auto;
+}
+
+.container-wide{
+    width: 1536px;
 }
