--- a/css/blocks/card.css
+++ b/css/blocks/card.css
@@ -1,8 +1,8 @@
 .card {
-	background-color: #fff;
 	width: 296px;
+	background-color: #fff;
 	border-radius: 4px;
-	box-shadow: 0px 3.62249px 18.1125px rgba(165, 165, 165, 0.25);
+	box-shadow: 0 3.62249px 18.1125px rgba(165, 165, 165, 0.25);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -25,7 +25,7 @@
 	height: 0.75px;
 	left: -7px;
 	right: -7px;
-	bottom: 0px;
+	bottom: 0;
 }
 
 .card-avatar {
@@ -34,17 +34,18 @@
 
 .card-contents {
 	text-align: left;
-	padding-left: 6px;
+	padding-left: -6px;
 }
 
 .card-contents-title {
-	font-family: 'Georgia', serif;
+	font-family: "Georgia", serif;
 	font-size: 16px;
 	margin-bottom: 22px;
 	font-weight: 700;
 }
 
 .card ul {
+	width: 100%;
 	font-size: 10.62px;
 	list-style-type: disc;
 	list-style-position: inside;
@@ -57,6 +58,5 @@
 @media (max-width: 500px) {
 
 	.card {
-		max-width: 296px;
 	}
 }
