--- a/css/reset.css
+++ b/css/reset.css
@@ -37,9 +37,9 @@ p + p {
     margin-top: 1em;
 }
 
-ul, ul li {
-    list-style: none;
-}
+/*ul, ul li {*/
+/*    list-style: none;*/
+/*}*/
 
 img {
     vertical-align: top;
