--- a/css/blocks/product.css
+++ b/css/blocks/product.css
@@ -70,43 +70,63 @@
 
 @media (max-width: 1299px) {
     .product {
+        padding-top: 80px;
     }
 
     .product-img-wrapper {
+        flex: 1 0 auto;
+        flex-basis: 50%;
     }
 
     .product-content-subtitle {
+        font-size: 40px;
+        line-height: 130%;
     }
 
     .product-card {
+        top: 60%;
     }
 }
 
 @media (max-width: 991px) {
     .product {
+        padding-top: 40px;
+
     }
 
     .product-row {
+        flex-direction: column-reverse;
     }
 
     .product-content {
+        margin-bottom: 40px;
     }
 
     .product-content-subtitle {
+        font-size: 30px;
     }
 
     .product-card {
-
+        position: relative;
+        z-index: 2;
+        margin-top: -10%;
+        display: flex;
+        justify-content: center;
     }
 
     .product-img-wrapper {
+        padding: 0;
+        margin: 0;
+        text-align: center;
     }
 }
 
 @media (max-width: 500px) {
     .product {
+        padding-bottom: 40px;
     }
 
     .product-card {
+        margin: -30% 15px 0;
     }
 }
