--- a/css/blocks/story.css
+++ b/css/blocks/story.css
@@ -73,34 +73,49 @@ transform: translate(-50%, -50%)}
 
 @media (max-width: 1199px) {
     .story {
+        padding:60px 0 60px;
     }
 
     .story-row {
+        flex-direction: column-reverse;
     }
 
     .story-video {
+        margin-bottom: 40px;
+        line-height: 1.3;
     }
 
     .story-heading {
+        font-size: 40px;
     }
 
     .story-text {
+        font-size: 20px;
+        line-height: 1.3;
     }
 
     .story-text + * {
+        margin-top: 30px;
     }
 }
 
 @media (max-width: 991px) {
     .story {
+        padding:30px 0 30px;
+
     }
 
     .story-heading {
+        font-size: 30px;
+        line-height: 1.3;
     }
 
     .story-text {
+        font-size: 18px;
+        line-height: 1.3;
     }
 
     .story-text + * {
+        margin-top: 20px;
     }
 }
