--- a/css/blocks/mobile-nav.css
+++ b/css/blocks/mobile-nav.css
@@ -1,6 +1,5 @@
 .mobile-nav {
     display: none;
-
     position: fixed;
     z-index: 99;
     top: 0;
@@ -24,6 +23,9 @@
 
 .mobile-nav-list {
     font-size: 22px;
+}
+.mobile-nav li{
+        list-style: none;
 }
 
 .mobile-nav-list li + li {
