--- a/css/blocks/story.css
+++ b/css/blocks/story.css
@@ -52,28 +52,33 @@
     position: absolute;
     left: 50%;
     top: 50%;
-transform: translate(-50%, -50%)}
+    transform: translate(-50%, -50%)
+}
 
 .story-video-overlay {
     position: absolute;
+    z-index: 99;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.20);
+    transition: opacity 0.2s ease;
 }
 
 .story-video-overlay.hidden {
-
+    opacity: 0;
 }
 
 .story-video-object {
-
+max-width: 100%;
+    height: auto;
+    vertical-align: top;
 }
 
 @media (max-width: 1199px) {
     .story {
-        padding:60px 0 60px;
+        padding: 60px 0 60px;
     }
 
     .story-row {
@@ -101,7 +106,7 @@ transform: translate(-50%, -50%)}
 
 @media (max-width: 991px) {
     .story {
-        padding:30px 0 30px;
+        padding: 30px 0 30px;
 
     }
 
